Fixed some Latin Sunday titles Fixed chant context menus being behind sticky chants Updated chants from GregoBase

--- a/propers.css
+++ b/propers.css
@@ -180,6 +180,7 @@ text.annotation {
 }
 div.chant-context {
   display: inline-block;
+  z-index: 1;
 }
 [part] use[source-index],
 [part] text[source-index] {
